<resources>
    <string name="app_name">FADTS</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signin">SignUp</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="backToLogin">Already have an account? Login</string>
    <string name="signinText">Create an account</string>
    <string name="welcome">Welcome to FADTS</string>
    <string name="search_here">search here</string>
    <string name="about_app">About app</string>
    <string name="main_description">This app work as a alternative to the FADTS web application for village officers to make easy their field works.</string>
    <string name="home">home</string>
    <string name="profile">profile</string>
    <string name="calender">calender</string>
    <string name="logout">logout</string>
    <string name="footer_note">© 2020, 2nd Year Group Project | UCSC</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

</resources>
